--- a/src/components/head.html
+++ b/src/components/head.html
@@ -1,11 +1,11 @@
 <style>
-    div.notion-topbar > div > div:nth-child(3) { display: none !important; }
-    div.notion-topbar > div > div:nth-child(4) { display: none !important; }
-    div.notion-topbar > div > div:nth-child(5) { display: none !important; }
-    div.notion-topbar > div > div:nth-child(6) { display: none !important; }
-    div.notion-topbar > div > div:nth-child(7) { display: none !important; }
+    /*div.notion-topbar > div > div:nth-child(3) { display: none !important; }*/
+    /*div.notion-topbar > div > div:nth-child(4) { display: none !important; }*/
+    /*div.notion-topbar > div > div:nth-child(5) { display: none !important; }*/
+    /*div.notion-topbar > div > div:nth-child(6) { display: none !important; }*/
+    /*div.notion-topbar > div > div:nth-child(7) { display: none !important; }*/
 
-    div.notion-topbar-mobile > div:nth-child(3) { display: none !important; }
-    div.notion-topbar-mobile > div:nth-child(4) { display: none !important; }
-    div.notion-topbar-mobile > div:nth-child(7) { display: none !important; }
+    /*div.notion-topbar-mobile > div:nth-child(3) { display: none !important; }*/
+    /*div.notion-topbar-mobile > div:nth-child(4) { display: none !important; }*/
+    /*div.notion-topbar-mobile > div:nth-child(7) { display: none !important; }*/
 </style>
